# pico-pattern

./: CMakeCache.txt  CMakeLists.txt  README.md  config.h  cvideo.c  cvideo.h  cvideo_data.pio  cvideo_sync.pio  graphics.c  main.c  main.h  schematic.tldr
3dfiles/: pi pico carrier plunger long.stl  pi pico carrier top.stl  pi pico washer.stl
